--- a/final.css
+++ b/final.css
@@ -11,7 +11,7 @@
 }
 
 .jumbotron {
-  background-image:url('http://i.imgur.com/VkGSHpC.png');
+  background-image:url('http://i.imgur.com/diHq5mz.png');
   height: 500px;
   background-repeat: no-repeat;
   background-size: cover;
