--- a/final.css
+++ b/final.css
@@ -11,7 +11,7 @@
 }
 
 .jumbotron {
-  background-image:url('http://i.imgur.com/diHq5mz.png');
+  background-image:url('http://s3images.coroflot.com/user_files/individual_files/original_391499_PDJrNL6Jw6eNkxhnAuATxFMRi.jpg');
   height: 500px;
   background-repeat: no-repeat;
   background-size: cover;
